Fri Aug  7 12:57:19 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_visitor_component/component_exs.cpp:
          Generate a safer set_session_context

Thu Aug  6 13:42:25 UTC 2009  William R. Otte  <Wotte@dre.vanderbilt.edu>

        * TAO_IDL/be/be_visitor_component/component_svh.cpp:
        * TAO_IDL/be/be_visitor_component/component_svs.cpp:

          Managed instance name strings with ACE_CString to avoid
          memory corruption.

Fri Jul 31 14:01:12 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Bounded_Array_Sequence_T.h
        * tao/Bounded_Basic_String_Sequence_T.h
        * tao/Bounded_Object_Reference_Sequence_T.h
        * tao/Bounded_Value_Sequence_T.h
        * tao/Unbounded_Array_Sequence_T.h
        * tao/Unbounded_Basic_String_Sequence_T.h
        * tao/Unbounded_Object_Reference_Sequence_T.h
        * tao/Unbounded_Octet_Sequence_T.h
        * tao/Unbounded_Value_Sequence_T.h
        * tao/Valuetype/Bounded_Valuetype_Sequence_T.h
        * tao/Valuetype/Unbounded_Valuetype_Sequence_T.h
          Added trait size_type which is ::CORBA_ULong

        * TAO_IDL/be/be_visitor_sequence/sequence_ch.cpp:
          Reverted the change below, we now have size_type in the base sequences

Fri Jul 31 13:35:12 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_visitor_sequence/sequence_ch.cpp:
          Generate for each sequence typedef ::CORBA::ULong _size_type as
          trait which is useful for template programming. Reported an issue
          to the OMG to get this added to the C++ spec

Fri Jul 24 17:48:12 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/StringSeqE.idl:
        * tao/StringSeqEC.h:
          Temporarily added to get DDS4CCM compiling

Tue Jul 21 11:43:47 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * be/be_helper.cpp:
          Use doxygen style of copyright

        * be/be_interface.cpp: